# MARL_Course

./: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  pyproject.toml
configs/: evaluate_bomber.json  evaluate_coop.json  evaluate_coop_zero_shot.json  train_bomber.json  train_bomber_actor_critic.json  train_bomber_actor_critic_selfplay.json  train_bomber_dqn.json  train_bomber_dqn_selfplay.json  train_coop_mappo.json  train_coop_qmix.json  train_coop_zero_shot.json
course/: README.md
course/run/: check_device.sh
course/teacher/: evaluate_bomber_tournament.py  evaluate_overcooked_ranking.py  (+2 more)
docs/: assignment_bomber_arena.md  assignment_coop_kitchen.md  code_reading_guide.md  config_reference.md  grading_guide.md  implementation_plan.md  mac_acceleration_guide.md  student_training_guide.md  teacher_training_guide.md
notebooks/: 01_bomber_arena_student_colab.ipynb  02_coop_kitchen_mappo_colab.ipynb  03_coop_kitchen_qmix_colab.ipynb  04_coop_kitchen_zero_shot_league_colab.ipynb
scripts/: check_torch_device.py  evaluate_bomber_tournament.py  evaluate_coop_submissions.py  evaluate_coop_zero_shot.py  render_policy_gif.py  smoke_check.py  train_bomber.py  train_bomber_actor_critic.py  train_bomber_actor_critic_selfplay.py  train_bomber_dqn.py  train_bomber_dqn_selfplay.py  train_coop_mappo.py  train_coop_qmix.py  train_coop_qmix_zero_shot.py  train_coop_zero_shot_league.py  visualize_episode.py
submissions/: README.md
tests/: test_bomber_arena.py  test_bomber_training_rewards.py  test_coop_kitchen.py  test_evaluation.py  test_torch_device.py
(+53 files in other folders)
